--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+ .inputStyle{
+  @apply px-4 w-[400px] py-4  border-2 border-slate-300  focus:outline-none focus:border-slate-400 shadow-md focus:shadow-xl rounded-xl   text-slate-700 font-medium font-sans ;
+}
+
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -24,4 +29,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
